# SHC-Tool

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/commands/: ip.rs  logs.rs  mod.rs  ollama.rs  ping.rs  scan.rs  test.rs
