[package]
name = "SHC"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
netdev = "0.35"
# Ollama-Integration
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }